adding configuration in nginx.conf to use weight as load balancing method. here, service1 has weight=2, so it will receive 2 out of every 4 requests. service2 and service3 will each receive 1 out of every 4 requests.

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -1,5 +1,5 @@
 upstream servers {
-    server service1:8080;
+    server service1:8080 weight=2;
     server service2:8080;
     server service3:8080;
 }
