adding configuration in nginx.conf to check health of services

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -1,12 +1,14 @@
 upstream servers {
-    server service1:8080;
-    server service2:8080;
-    server service3:8080;
+    server service1:8080 max_fails=2 fail_timeout=10s;
+    server service2:8080 max_fails=2 fail_timeout=10s;
+    server service3:8080 max_fails=2 fail_timeout=10s;
 }
 
 server {
     listen 9090;
+    error_log /var/log/nginx/my_service_error.log error;  # Error log for this specific server
     location / {
         proxy_pass http://servers/;
+        proxy_read_timeout 5s;  # Timeout for reading the response from the backend
     }
 }
