adding configuration in nginx.conf to check health of services

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -1,3 +1,6 @@
+# Define the cache path and settings
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=1g inactive=5m use_temp_path=off;
+
 upstream servers {
     server service1:8080;
     server service2:8080;
@@ -6,6 +9,19 @@ upstream servers {
 
 server {
     listen 9090;
+    location = /api/v1/uuid/get-slow {
+        proxy_pass http://servers/api/v1/uuid/get-slow;
+
+        # Enable caching
+        proxy_cache my_cache;
+        proxy_cache_key "$scheme$proxy_host$request_uri$remote_addr"; # Vary cache by client IP
+        proxy_cache_valid 200 2m;  # Cache 200 OK responses for 10 minutes
+        proxy_cache_valid any 30s;  # Cache 404 responses for 30 seconds
+        proxy_cache_use_stale error timeout updating;  # Use stale cache when backend errors
+        proxy_cache_background_update on; # Asynchronously update cache
+        add_header X-Cache-Status $upstream_cache_status; # Adds a header to show cache status
+    }
+
     location / {
         proxy_pass http://servers/;
     }
